# Exam-Prep

./: .gitignore  ARCHITECTURE.md  README.md  deploy.sh  docker-compose.yml  update.sh
backend/: .env.example  .env.production  Dockerfile  alembic.ini  pyproject.toml  seed_coding.py  seed_question_pool.py
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py
backend/app/ai/: client.py  generator.py  prompts.py
backend/app/api/: router.py
backend/app/core/: cache.py  pagination.py  rate_limit.py  security.py  subscription.py
backend/app/models/: __init__.py  adaptive.py  analytics.py  base.py  blog.py  coding.py  discussion.py  exam.py  gamification.py  interview.py  mistake.py  notification.py  page_content.py  passage.py  payment.py  practice.py  question.py  quiz.py  study_planner.py  test.py  user.py
backend/app/schemas/: analytics.py  auth.py  common.py  exam.py  gamification.py  mistake.py  practice.py  question.py  test.py  user.py
backend/app/services/: adaptive_service.py  admin_service.py  analytics_service.py  auth_service.py  blog_service.py  chatbot_service.py  coding_service.py  daily_quiz_service.py  email_service.py  gamification_service.py  interview_service.py  mistake_service.py  mock_test_service.py  payment_service.py  practice_service.py  question_pool_service.py  (+7 more)
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_gamification.py  test_health.py  test_payments.py  test_security.py  test_study_planner.py  test_users.py
(+179 files in other folders)
